components/policies-rd/rings/ring-0/base/base-snapshot/konflux-rbac/bootstrap-tenant-namespace/.kyverno-test/resources/expected-networkpolicy_allow-from-openshift-monitoring.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
  namespace: labeled-namespace-konflux
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
